# pgsocr

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pgsocr/: __main__.py  img_utils.py  llm_ocr_engines.py  main.py  ocr_engines.py  pgsocr.py  pgsparser.py  supconvert.py  tesseract_ocr_engine.py  tesseract_ocr_engines.py  transformer_ocr_engines.py  utils.py
